syntax = "proto3";
package rpc;
option go_package = ".";

import "google/protobuf/timestamp.proto";

service PoeStatus {
  rpc SaveScanResults(ScanResults) returns (Empty);
}

message ScanResults {
  string ScanIP = 1;
  string Host = 2;
  google.protobuf.Timestamp CreatedAt = 3;
  repeated PortInfo Ports = 4;
  string ScanError = 5;
  string Platform = 6;
  PingInfo PingInfo = 7;
  AuthToken AuthToken = 8;
}

message PortInfo {
  int32 Port = 1;
  bool Open = 2;
}

message AuthToken {
  string Token = 1;
}

message PingInfo {
  int32 Transmitted = 1;
  int32 Received = 2;
  int32 Loss = 3;
  string Output = 4;
}

message Empty {
}
